--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,6 @@
 {
   "testEnvironment": "node",
-  "testMatch": ["**.test.js"],
+  "testMatch": ["**/**.test.js"],
   "coverageDirectory": "coverage",
   "collectCoverageFrom": ["*.js"]
 }
